<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/send_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_weight"
            android:text="@string/recivedDataText"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/slash"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / "
            android:textSize="40sp"
            android:id="@+id/slash"
            app:layout_constraintStart_toEndOf="@id/input_weight"
            app:layout_constraintEnd_toStartOf="@id/set_weight"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_weight"
            android:textSize="40sp"
            android:text = "@string/set_weight"
            tools:text="500"
            app:layout_constraintStart_toEndOf="@id/slash"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setButton"
        android:text="@string/set_Button"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        style="@style/button_card"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/send_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/terra_button"
        style="@style/button_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terra_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight_progress_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/setButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/progressBar"
            style="@style/HorizontalProgressBarStyle"
            app:layout_constraintTop_toBottomOf="@id/setButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:progressDrawable="@drawable/progress_bar_green"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginBottom="20dp"
            tools:progress="500" />
        <com.github.anastr.speedviewlib.SpeedView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedView"
            app:sv_minSpeed="0"
            app:sv_maxSpeed="5000"
            app:sv_textSize="16sp"
            app:sv_speedTextSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/setButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tts_switch"
        android:text="@string/tts_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>