<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_height="wrap_content">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:title="@string/recipe_weight_ToolBar_text"
        android:titleTextColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/recipe_weight_toolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recipe_weight_display"/>

    <LinearLayout
        android:id="@+id/recipe_weight_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_weight_toolBar"
        app:layout_constraintBottom_toTopOf="@id/selected_values_container">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_weight"
            android:text="@string/current_weight"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/slash"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / "
            android:textSize="40sp"
            android:id="@+id/slash"
            app:layout_constraintStart_toEndOf="@id/current_weight"
            app:layout_constraintEnd_toStartOf="@id/recipe_set_weight"
            android:visibility="visible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recipe_set_weight"
            android:textSize="40sp"
            android:text = "@string/set_weight"
            app:layout_constraintStart_toEndOf="@id/slash"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"/>
    </LinearLayout>
    <!-- List of selected values will be added dynamically here -->
    <LinearLayout
        android:id="@+id/selected_values_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/recipe_weight_display"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>