<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 남성과 여성 선택 버튼을 포함하는 LinearLayout -->
            <LinearLayout
                android:id="@+id/gender_selection_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:drawableStart="@mipmap/ic_male"
                    android:drawablePadding="4dp"
                    android:backgroundTint="@color/gray"
                    android:gravity="center"
                    android:minHeight="150dp"
                    android:minWidth="150dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:drawableStart="@mipmap/ic_female"
                    android:drawablePadding="4dp"
                    android:backgroundTint="@color/gray"
                    android:gravity="center"
                    android:minHeight="150dp"
                    android:minWidth="150dp" />


            </LinearLayout>

            <!-- 키와 몸무게 입력 필드를 포함하는 LinearLayout -->
            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <!-- 키 입력 필드 -->
                <EditText
                    android:id="@+id/height_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:hint="키 (cm)"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <!-- 몸무게 입력 필드 -->
                <EditText
                    android:id="@+id/weight_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:hint="몸무게 (kg)"
                    android:inputType="numberDecimal"
                    android:padding="12dp"
                    android:textSize="16sp" />

            </LinearLayout>

            <!-- 생년월일과 나이 입력 필드를 포함하는 LinearLayout -->
            <LinearLayout
                android:id="@+id/birth_age_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <!-- 생년월일 입력 필드 -->
                <EditText
                    android:id="@+id/birth_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:hint="생년월일"
                    android:inputType="date"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:focusable="false"
                    android:clickable="true" />

                <!-- 나이 입력 필드 -->
                <EditText
                    android:id="@+id/age_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:hint="나이"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:focusable="false"
                    android:clickable="false" />

            </LinearLayout>

            <!-- 활동 지수 선택 Spinner -->
            <Spinner
                android:id="@+id/activity_level_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:entries="@array/activity_levels"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:spinnerMode="dropdown" />

            <!-- 권장 섭취량 정보 Layout -->
            <LinearLayout
                android:id="@+id/recommended_intake_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:padding="16dp">

                <!-- 빈칸을 채우라는 안내 메시지 -->
                <TextView
                    android:id="@+id/tv_fill_all_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="빈칸을 채우시오"
                    android:textSize="16sp"
                    android:visibility="visible"
                    android:layout_gravity="center" />

                <!-- 권장 섭취량 정보들 (초기에는 숨김 상태로 설정) -->
                <LinearLayout
                    android:id="@+id/recommended_values_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <!-- 칼로리 권장 섭취량 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/calories" />
                        <TextView
                            android:id="@+id/tv_recommended_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recommended_cal"
                            android:textSize="16sp"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- 나트륨 권장 섭취량 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/sodium" />
                        <TextView
                            android:id="@+id/tv_recommended_sodium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recommended_na"
                            android:textSize="16sp"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- 탄수화물 권장 섭취량 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/carbohydrates" />
                        <TextView
                            android:id="@+id/tv_recommended_carbohydrates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recommended_car"
                            android:textSize="16sp"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- 단백질 권장 섭취량 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/proteins" />
                        <TextView
                            android:id="@+id/tv_recommended_proteins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recommended_pro"
                            android:textSize="16sp"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- 지방 권장 섭취량 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@mipmap/fat" />
                        <TextView
                            android:id="@+id/tv_recommended_fat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recommended_fat"
                            android:textSize="16sp"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
